Fix: Optimizar build command para Render free tier

--- a/render.yml
+++ b/render.yml
@@ -3,8 +3,10 @@ services:
     name: fit-clase-api
     env: node
     plan: free
-    buildCommand: npm ci --production=false && node --max-old-space-size=460 ./node_modules/.bin/nest build
+    buildCommand: npm install && node --max-old-space-size=400 node_modules/.bin/nest build
     startCommand: npm run start:prod
     envVars:
       - key: NODE_ENV
         value: production
+      - key: NODE_OPTIONS
+        value: --max-old-space-size=400
