--- a/render.yml
+++ b/render.yml
@@ -3,10 +3,12 @@ services:
     name: fit-clase-api
     env: node
     plan: free
-    buildCommand: npm install && node --max-old-space-size=400 node_modules/.bin/nest build
+    buildCommand: npm install --omit=dev && npm install --no-save @nestjs/cli typescript && NODE_OPTIONS="--max-old-space-size=400" npm run build
     startCommand: npm run start:prod
     envVars:
       - key: NODE_ENV
         value: production
       - key: NODE_OPTIONS
         value: --max-old-space-size=400
+      - key: PORT
+        value: 4000
